burger jumping fix

--- a/app/content-items/header/_header.scss
+++ b/app/content-items/header/_header.scss
@@ -146,7 +146,7 @@
     top: 0;
     right: 0;
     transition: transform 0.4s ease;
-    transform: translateX(100%);
+    transform: translateX(256px);
     overflow: auto;
     padding: 22px 16px;
     background: #fff;
